2003-03-14  Seth Robertson  <seth@winwood.sysdetect.com>

	* lib/b_fileutils.c (bk_slurp): Add routines to slurp files.

2003-03-13  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_url.c (bk_url_reconstruct): Function to reconstruct a
	valid url string from it's parsed components.

2003-03-07  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_run.c (bk_run_event_comparator): Priority queues want
	*BOOLEAN* *NOT* tri-state comparators.

	* lib/b_ioh.c (bk_ioh_init): Initialization for follow mode.
	(ioh_runhandler): Check if we run out of data in follow mode.
	(check_follow): Function to determine (when in follow mode)
	whether we need to wait for new data or to proceed if new data
	have arrived.

2003-03-07  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_bnbio.c (bk_iohh_bnbio_read): If we've timed out but
	miraculously found some data at the last instant, do not count the
	round as a timeout.

2003-02-28  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_strcode.c (bk_string_str2xml): Allocate enough memory to
	hold the result so that we don't dump core.

	* lib/b_error.c (be_error_append): Prevent garbage after error
	message by zeroing memory first.

	* lib/b_strconv.c (bk_string_atot): Added bk_string_atot.

2003-02-23  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_string.c (bk_string_unique_string): Avoid placing EOS
	marker in middle of string (snprintf(3) *guarentees* an EOS at the
	end).

2003-02-22  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_error.c (bk_error_iprintbuf): Don't go through
	error_printf for two reasons: eliminate memory size constraint,
	eliminate possibility for printf char interpolation.

2003-02-13  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* include/libbk.h: Added BK_MIN and MK_MAX.

2003-02-11  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_memx.c (bk_memx_addstr): Wrapper around bk_memx_get to
	handle the common(?) case where you want to have an infinately